fixed timeline years alignment issues

--- a/app/styles/modal.css
+++ b/app/styles/modal.css
@@ -134,6 +134,8 @@
 }
 
 .modal .timeline-year-container {
+  margin-left:auto;
+  margin-right: auto;
   width: 85%;
 }
 .modal .timeline-grid-container {
